# OS_FinalProject

./: CMakeLists.txt  Makefile  README.md  server  tests
src/: main.cpp
src/Model/: Graph.cpp  Graph.hpp  MST.cpp  MST.hpp  MSTFactory.cpp  MSTFactory.hpp
src/Model_Test/: MST_Tests.cpp
src/Network/: ActiveObject.cpp  ActiveObject.hpp  LeaderFollowers.cpp  LeaderFollowers.hpp  Pipeline.cpp  Pipeline.hpp  Server.cpp  Server.hpp  Server_LF.hpp  Server_PL.hpp
